--- a/guestRaces/guestRacesTabs/ch14/wonders.html
+++ b/guestRaces/guestRacesTabs/ch14/wonders.html
@@ -21,42 +21,49 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/KsYZrqD/aw1.png" style="max-width: 30%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/KsYZrqD/aw1.png" style="max-width: 26%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Size<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">4x7</td>
+                <td style="width: 8%; text-align: center; width: 50%;">3x6</td>
               </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                    <img src="https://i.ibb.co/6WVfrtC/aw2-effect1.png" style="width: 24px;"> Reduces Ascended Goods Decay<br>
-                    <h7>to 8.8% at level 1 and to 2% at level 30 (grows linearly)</h7><br>
-                    <img src="https://i.ibb.co/T0kWHNQ/aw1-effect2.png" style="width: 24px;"> Produces Ghastly Banshees every 3 hours (as a percentage of your current Units per Squad)<br>
-                    <h7>from 22.5% of your squad size at level 1 to 172.5% of your squad size at level 35 (grows linearly)</h7>
+                    <img src="https://i.ibb.co/6WVfrtC/aw2-effect1.png" style="width: 24px;"> Increases the production boosts for your Sentient Goods<br>
+                    <h7>from 124% of basic production at level 1 to 284% of basic production at level 35</h7><br>
+                    <img src="https://i.ibb.co/T0kWHNQ/aw1-effect2.png" style="width: 24px;"> Reduces the cooldown of the Tournament rounds<br>
+                    <h7>from 12% of reduction at level 1 to 80% of reduction at level 30</h7>
                 </td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Evaluation<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">Reduction of decay is one of the most useful benefits for your city and can greatly
-                facilitate the stacking of respective goods. Ascended goods will be an integral part of any future chapter and it makes sense to
-                ease the trading process by reducing the nightly decay. Future wonders may bring additional effects for ascended goods, but at the time
-                of writing this guide, only the Maman Le Pré's Antique Shop is known to give ascended goods when collecting community work, while
-                having almost useless secondary effect. Community Work is highly likely to receive some more interesting wonders in the future, so at this point,
-                I have decided to go with Ancestral Resting Place despite its rather large size.<br>
-                I do not consider the secondary effect to be a compelling reason for constructing this wonder.</td>
+                <td style="width: 8%; text-align: center; width: 50%;">Chapter 14 stands out as one of the best chapters for wonders, and the 
+                  D111-a "Timewarp" is a remarkable example. Its unique Tournament cooldown reduction effect allows you to reduce the cooldown 
+                  by up to 80%. Combining this with the Polar Bear evolving building, which further reduces the cooldown by 20%, results 
+                  in a total 100% reduction! This enables you to play the entire Tournament, including all rounds, in one session, saving not only 
+                  time but also valuable resources like Military Boost buildings and Pet Food. With the duration you now spend in Tournament, being covered by the 
+                  effect of, for instance, the Fire Phoenix, only one Pet Food for it is required and so the success in Tournaments is significantly enhanced - a strategy widely adopted by 
+                  veteran players.<br>
+                  You can also utilize the cooldown reduction to your advantage by saving your Military Boost Buildings. 
+                  Here's what I do: one week, I play the Tournament on Friday, and the following week, I play it on Tuesday. 
+                  This way, I can cover both Tournaments with just one set of Military Boost buildings, as my Tournament days fall within the 5-day range 
+                  when these buildings remain active.<br>
+                  In addition, the wonder's second effect is a valuable addition and even surpasses the Sentient Goods production boost offered 
+                  by the Vortex of Storage wonder in the following chapter. I highly recommend everyone to build this wonder, and I even 
+                  suggest to accelerate progressing in previous chapters to construct it as soon as possible.</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Rating<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_8">8/10</b></td>
+                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_10">10/10</b></td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
@@ -74,35 +81,38 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/nMN5XSd/aw2.png" style="max-width: 23%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/nMN5XSd/aw2.png" style="max-width: 26%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Size<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">5x3</td>
+                <td style="width: 8%; text-align: center; width: 50%;">6x5</td>
               </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                      <img src="https://i.ibb.co/L1b1Yz5/aw2-effect1.png" style="width: 24px;"> Reduces the Scouting time<br>
-                      <h7>to 94% at level 1 and to 35% at level 35 (grows linearly)</h7><br>
-                      <img src="https://i.ibb.co/2c1Kgfd/aw2-effect2.png" style="width: 24px;"> Increases the amount of Neighbourly Help Chests<br>
-                      <h7>from 1 additional chest at level 1 to 4 additional chests at level 31 (grows linearly)</h7>
+                      <img src="https://i.ibb.co/L1b1Yz5/aw2-effect1.png" style="width: 24px;"> Decreases the decay of Sentient Goods<br>
+                      <h7>from 1.2% of reduction at level 1 to 8% of reduction at level 30</h7><br>
+                      <img src="https://i.ibb.co/2c1Kgfd/aw2-effect2.png" style="width: 24px;"> Gives additional units every time you collect them from your Barracks, Training Grounds or Mercenary Camp<br>
+                      <h7>from 106% at level 1 to 146% at level 35</h7>
                 </td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Evaluation<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">Before the wonder was introduced, the scouting time reduction
-                was one of the most requested features of the community. Many players now consider the Scout's Tavern to be a highlight of the
-              latest chapters and it becomes a motivation for them to progress forward. This wonder is in my opinion the must-have for everyone who completed the chapter 20.<br>
-              The second effect can become especially useful if you have other bonuses in your city that grant you additional rewards when giving neighbourly help.
-              This can be the Sunset Towers wonder (granting additional seeds for each collected neighbourly help chest), Crystal Lighthouse / Great Bell Spire wonder
-              (granting additional boosted goods) or Moon Bear pet (providing up to 3 knowledge points for every neighbourly help chest while the effect is active).</td>
+                <td style="width: 8%; text-align: center; width: 50%;">The D222-z "Simia Sapiens" wonder is a rare gem, as both of its effects 
+                  are a must-have for any city. The Sentient Goods reduction offers significant assistance for these goods, especially in future 
+                  chapters where their requirements will notably increase. Upgrading the wonder to its highest level and maximizing this effect 
+                  will almost negate the need for further wonders' effects on Sentient Goods, such as the one in the Vortex of Storage from 
+                  Chapter 15.<br>
+                  The second effect is truly exceptional, as it increases the output of Units from any Military Buildings without extending 
+                  the Training time or raising the Training costs. This exceptional boost can significantly enhance your city's military power. 
+                  I highly recommend constructing this wonder as soon as you reach Chapter 14 and prioritize upgrading it to the highest level.
+                  The combination of the wonders of this chapter will be truly remarkable for your future Tournament's performance.</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
