--- a/guestRaces/guestRacesTabs/ch15/wonders.html
+++ b/guestRaces/guestRacesTabs/ch15/wonders.html
@@ -21,42 +21,44 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/6X0GtxS/aw1.png" style="max-width: 30%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/6X0GtxS/aw1.png" style="max-width: 24%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Size<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">4x7</td>
+                <td style="width: 8%; text-align: center; width: 50%;">3x6</td>
               </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                    <img src="https://i.ibb.co/QjhB2kM/aw1-effect1.png" style="width: 24px;"> Reduces Ascended Goods Decay<br>
-                    <h7>to 8.8% at level 1 and to 2% at level 30 (grows linearly)</h7><br>
-                    <img src="https://i.ibb.co/6WVfrtC/aw2-effect1.png" style="width: 24px;"> Produces Ghastly Banshees every 3 hours (as a percentage of your current Units per Squad)<br>
-                    <h7>from 22.5% of your squad size at level 1 to 172.5% of your squad size at level 35 (grows linearly)</h7>
+                    <img src="https://i.ibb.co/QjhB2kM/aw1-effect1.png" style="width: 24px;"> Enhances your capped Settlement Goods storage capacity<br>
+                    <h7>from 6.5% at level 1 to 55% at level 35</h7><br>
+                    <img src="https://i.ibb.co/6WVfrtC/aw2-effect1.png" style="width: 24px;"> Increases the production boosts for your Sentient Goods<br>
+                    <h7>from 120% of basic production at level 1 to 190% of basic production at level 35</h7>
                 </td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Evaluation<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">Reduction of decay is one of the most useful benefits for your city and can greatly
-                facilitate the stacking of respective goods. Ascended goods will be an integral part of any future chapter and it makes sense to
-                ease the trading process by reducing the nightly decay. Future wonders may bring additional effects for ascended goods, but at the time
-                of writing this guide, only the Maman Le Pré's Antique Shop is known to give ascended goods when collecting community work, while
-                having almost useless secondary effect. Community Work is highly likely to receive some more interesting wonders in the future, so at this point,
-                I have decided to go with Ancestral Resting Place despite its rather large size.<br>
-                I do not consider the secondary effect to be a compelling reason for constructing this wonder.</td>
+                <td style="width: 8%; text-align: center; width: 50%;">In Chapter 14, we previously encountered the Sentient Goods production boost 
+                  in the D111-a "Timewarp" wonder. Its production boost exceeded that of the Vortex of Storage, and as I regularly collect 
+                  additional Sentient Goods from Orcs productions (thanks to the Pyramid of Purification from Chapter 13), I found no need for 
+                  an additional boost.<br>
+                  As for the first effect of the Vortex of Storage, increasing the storage capacity of Settlement Portals is a welcome addition, 
+                  particularly for those with limited Portal Profit instants. Having a higher capacity enhances the efficiency of each Portal Profit 
+                  used. However, if you actively participate in the weekly Spire of Eternity or events, chances are you already possess dozens of 
+                  these instants in your inventory. In such a case, using more of them to achieve the desired effect won't be a significant concern,
+                  nor the need to construct an additional wonder to your city.</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Rating<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_8">8/10</b></td>
+                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_6">6/10</b></td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
@@ -74,35 +76,37 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/Cwp2QH4/aw2.png" style="max-width: 23%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/Cwp2QH4/aw2.png" style="max-width: 26%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Size<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">5x3</td>
+                <td style="width: 8%; text-align: center; width: 50%;">7x3</td>
               </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                      <img src="https://i.ibb.co/K7PV6d5/aw2-effect1.png" style="width: 24px;"> Reduces the Scouting time<br>
-                      <h7>to 94% at level 1 and to 35% at level 35 (grows linearly)</h7><br>
-                      <img src="https://i.ibb.co/pdG4vjx/aw2-effect2.png" style="width: 24px;"> Increases the amount of Neighbourly Help Chests<br>
-                      <h7>from 1 additional chest at level 1 to 4 additional chests at level 31 (grows linearly)</h7>
+                      <img src="https://i.ibb.co/K7PV6d5/aw2-effect1.png" style="width: 24px;"> Increases the Population provided by Residences<br>
+                      <h7>from 5% at level 1 to 22% at level 35</h7><br>
+                      <img src="https://i.ibb.co/pdG4vjx/aw2-effect2.png" style="width: 24px;"> Adds additional Culture for every Ancient Wonder level present in the city<br>
+                      <h7>from 22.5x at level 1 to 165x at level 35</h7>
                 </td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Evaluation<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">Before the wonder was introduced, the scouting time reduction
-                was one of the most requested features of the community. Many players now consider the Scout's Tavern to be a highlight of the
-              latest chapters and it becomes a motivation for them to progress forward. This wonder is in my opinion the must-have for everyone who completed the chapter 20.<br>
-              The second effect can become especially useful if you have other bonuses in your city that grant you additional rewards when giving neighbourly help.
-              This can be the Sunset Towers wonder (granting additional seeds for each collected neighbourly help chest), Crystal Lighthouse / Great Bell Spire wonder
-              (granting additional boosted goods) or Moon Bear pet (providing up to 3 knowledge points for every neighbourly help chest while the effect is active).</td>
+                <td style="width: 8%; text-align: center; width: 50%;">Every wonder that offers Population should be considered a must-have 
+                  structure in your city. The significance of this wonder's effect improves with each new chapter, as the Population provided 
+                  in Residential buildings increases with each advancement. It is even possible that in the future, the developers may take 
+                  into account players having this wonder and set the further requirements accordingly. As such, I highly recommend everyone to construct 
+                  this wonder.<br>
+                  The effect gets even more prominent if you own Premium Residential buildings (for example if you won them from the Spire of Eternity
+                  or bought them with Diamonds).<br>
+                  The second effect serves as a valuable addition to the already important Population boost provided by the effect number one.</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
