--- a/guestRaces/guestRacesTabs/ch16/wonders.html
+++ b/guestRaces/guestRacesTabs/ch16/wonders.html
@@ -21,42 +21,44 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/0YGS8Gf/aw1.png" style="max-width: 30%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/0YGS8Gf/aw1.png" style="max-width: 26%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Size<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">4x7</td>
+                <td style="width: 8%; text-align: center; width: 50%;">4x6</td>
               </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                    <img src="https://i.ibb.co/XZ03HGC/aw1-effect1.png" style="width: 24px;"> Reduces Ascended Goods Decay<br>
-                    <h7>to 8.8% at level 1 and to 2% at level 30 (grows linearly)</h7><br>
-                    <img src="https://i.ibb.co/k44F5Mq/aw1-effect2.png" style="width: 24px;"> Produces Ghastly Banshees every 3 hours (as a percentage of your current Units per Squad)<br>
-                    <h7>from 22.5% of your squad size at level 1 to 172.5% of your squad size at level 35 (grows linearly)</h7>
+                    <img src="https://i.ibb.co/XZ03HGC/aw1-effect1.png" style="width: 24px;"> Gives extra Ranking Points per Fellowship reward (Spire Crystal) that you and your Fellowship unlocked at the end of the Spire of Eternity<br>
+                    <h7>from 0.5 ranking points per crystal at level 1 to 17.5 ranking points at level 35</h7><br>
+                    <img src="https://i.ibb.co/CB7JkFY/knowledge-points-new.png" style="width: 24px;"> Produces Knowledge Points every 24 hours<br>
+                    <h7>from 1 KP at level 1 to 7 KPs at level 31</h7>
                 </td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Evaluation<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">Reduction of decay is one of the most useful benefits for your city and can greatly
-                facilitate the stacking of respective goods. Ascended goods will be an integral part of any future chapter and it makes sense to
-                ease the trading process by reducing the nightly decay. Future wonders may bring additional effects for ascended goods, but at the time
-                of writing this guide, only the Maman Le Pré's Antique Shop is known to give ascended goods when collecting community work, while
-                having almost useless secondary effect. Community Work is highly likely to receive some more interesting wonders in the future, so at this point,
-                I have decided to go with Ancestral Resting Place despite its rather large size.<br>
-                I do not consider the secondary effect to be a compelling reason for constructing this wonder.</td>
+                <td style="width: 8%; text-align: center; width: 50%;">While I did choose to construct this wonder in my city, I gave higher priority 
+                  to other wonders first. Upon careful calculation, it becomes evident that it would take years to recoup the Knowledge Points spent on 
+                  upgrading this wonder solely from its daily effect. Hence, the 
+                  only relevant effect for me was the extra Ranking Points per Spire Crystal. The effectiveness of this effect depends on how much 
+                  value you place on your position in the Ranking and how proficiently you and your fellowship can achieve commendable results in 
+                  the Spire of Eternity.<br>
+                  If you find both aspects important and advantageous, building this wonder might make sense. However, it primarily hinges on your 
+                  personal preferences. It's worth noting that this wonder is not a must-have structure, and it won't provide any important benefits 
+                  to your city.</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Rating<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_8">8/10</b></td>
+                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_5">5/10</b></td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
@@ -80,35 +82,38 @@
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Size<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">5x3</td>
+                <td style="width: 8%; text-align: center; width: 50%;">4x5</td>
               </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                      <img src="https://i.ibb.co/XZ03HGC/aw1-effect1.png" style="width: 24px;"> Reduces the Scouting time<br>
-                      <h7>to 94% at level 1 and to 35% at level 35 (grows linearly)</h7><br>
-                      <img src="https://i.ibb.co/s1b9Qxy/aw2-effect2.png" style="width: 24px;"> Increases the amount of Neighbourly Help Chests<br>
-                      <h7>from 1 additional chest at level 1 to 4 additional chests at level 31 (grows linearly)</h7>
+                      <img src="https://i.ibb.co/XZ03HGC/aw1-effect1.png" style="width: 24px;"> Gives extra Ranking Points per Tournament Chest completed<br>
+                      <h7>from 0.5 ranking points per crystal at level 1 to 17.5 ranking points at level 35</h7><br>
+                      <img src="https://i.ibb.co/s1b9Qxy/aw2-effect2.png" style="width: 24px;"> Produces a certain amount of Venom Drone Riders every 3 hours, depending on your current Units per Squad<br>
+                      <h7>from 22.5% at level 1 to 172.5% at level 35</h7>
                 </td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Evaluation<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">Before the wonder was introduced, the scouting time reduction
-                was one of the most requested features of the community. Many players now consider the Scout's Tavern to be a highlight of the
-              latest chapters and it becomes a motivation for them to progress forward. This wonder is in my opinion the must-have for everyone who completed the chapter 20.<br>
-              The second effect can become especially useful if you have other bonuses in your city that grant you additional rewards when giving neighbourly help.
-              This can be the Sunset Towers wonder (granting additional seeds for each collected neighbourly help chest), Crystal Lighthouse / Great Bell Spire wonder
-              (granting additional boosted goods) or Moon Bear pet (providing up to 3 knowledge points for every neighbourly help chest while the effect is active).</td>
+                <td style="width: 8%; text-align: center; width: 50%;">Similarly to Spire Library, while I did choose to construct this wonder in my city, I gave higher priority 
+                  to other wonders first. The production of Venom Drone Riders was not a decisive factor in determining whether I should build this wonder or not. 
+                  Hence, the 
+                  only relevant effect for me was the extra Ranking Points per Tournament Chest. The effectiveness of this effect depends on how much 
+                  value you place on your position in the Ranking and how proficiently you and your fellowship can achieve commendable results in 
+                  the Tournaments.<br>
+                  If you find both aspects important and advantageous, building this wonder might make sense. However, it primarily hinges on your 
+                  personal preferences. It's worth noting that similarly to Spire Library, this wonder is not a must-have structure, and it won't provide any important benefits 
+                  to your city.</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Rating<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_10">10/10</b></td>
+                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_5">5/10</b></td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
