--- a/guestRaces/guestRacesTabs/ch17/wonders.html
+++ b/guestRaces/guestRacesTabs/ch17/wonders.html
@@ -21,42 +21,47 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/2sCkgpf/aw1.png" style="max-width: 30%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/2sCkgpf/aw1.png" style="max-width: 28%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Size<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">4x7</td>
+                <td style="width: 8%; text-align: center; width: 50%;">5x4</td>
               </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                    <img src="https://i.ibb.co/1vkVcjQ/aw1-effect1.png" style="width: 24px;"> Reduces Ascended Goods Decay<br>
-                    <h7>to 8.8% at level 1 and to 2% at level 30 (grows linearly)</h7><br>
-                    <img src="https://i.ibb.co/nqpy396/aw1-effect2.png" style="width: 24px;"> Produces Ghastly Banshees every 3 hours (as a percentage of your current Units per Squad)<br>
-                    <h7>from 22.5% of your squad size at level 1 to 172.5% of your squad size at level 35 (grows linearly)</h7>
+                    <img src="https://i.ibb.co/1vkVcjQ/aw1-effect1.png" style="width: 24px;"> Rewards an amount of Boosted Precious Sentient Goods when accomplishing a quest of the main story<br>
+                    <h7>from 18x the number of your completed provinces at level 1 to 138x at level 35</h7><br>
+                    <img src="https://i.ibb.co/nqpy396/aw1-effect2.png" style="width: 24px;"> Rewards Combining Catalysts every time you receive a Mystical Object from Crafting<br>
+                    <h7>from 2 combining catalysts at level 1 to 14 combining catalysts at level 35</h7>
                 </td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Evaluation<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">Reduction of decay is one of the most useful benefits for your city and can greatly
-                facilitate the stacking of respective goods. Ascended goods will be an integral part of any future chapter and it makes sense to
-                ease the trading process by reducing the nightly decay. Future wonders may bring additional effects for ascended goods, but at the time
-                of writing this guide, only the Maman Le Pré's Antique Shop is known to give ascended goods when collecting community work, while
-                having almost useless secondary effect. Community Work is highly likely to receive some more interesting wonders in the future, so at this point,
-                I have decided to go with Ancestral Resting Place despite its rather large size.<br>
-                I do not consider the secondary effect to be a compelling reason for constructing this wonder.</td>
+                <td style="width: 8%; text-align: center; width: 50%;">In the past, we had the opportunity to collect multiple Moonstone Library Sets
+                   from the Spire of Eternity, and many of us took advantage of this chance, allowing us to easily accumulate Combining Catalysts.
+                   However, this option is no longer available, making it quite challenging to gather Combining Catalysts now. Despite these changes,
+                   I still find the most practical approach to obtaining Combining Catalysts by producing them within the Magic Academy. Given my
+                   above-average results in Tournaments, I have an abundant supply of other spells from there, so my Magic Academy is dedicated
+                   entirely to producing Combining Catalysts. Consequently, I haven't faced any issues with their availability for quite some time.
+                   While I believe this wonder may offer relief to some players, I personally decided against investing my city's space and resources
+                   in it.<br>
+                  The second effect of the wonder is not a motivating factor for me to build it either. There are already numerous other sources
+                  for acquiring Sentient Goods, the most significant of which, for me, is the Pyramid of Purification wonder from Chapter 13. With
+                  ample access to Sentient Goods from other sources, I do not see the need to prioritize this wonder for its second effect.
+                  </td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Rating<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_8">8/10</b></td>
+                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_6">6/10</b></td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
@@ -74,41 +79,50 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/7rHrSWB/aw2.png" style="max-width: 23%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/7rHrSWB/aw2.png" style="max-width: 26%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Size<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">5x3</td>
+                <td style="width: 8%; text-align: center; width: 50%;">5x5</td>
               </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                      <img src="https://i.ibb.co/6WVfrtC/aw2-effect1.png" style="width: 24px;"> Reduces the Scouting time<br>
-                      <h7>to 94% at level 1 and to 35% at level 35 (grows linearly)</h7><br>
-                      <img src="https://i.ibb.co/YcZQHvR/aw2-effect2.png" style="width: 24px;"> Increases the amount of Neighbourly Help Chests<br>
-                      <h7>from 1 additional chest at level 1 to 4 additional chests at level 31 (grows linearly)</h7>
+                      <img src="https://i.ibb.co/6WVfrtC/aw2-effect1.png" style="width: 24px;"> Rewards an amount of random Boosted Sentient Goods every time you craft something<br>
+                      <h7>from 3x the number of your completed provinces at level 1 to 23x at level 34</h7><br>
+                      <img src="https://i.ibb.co/YcZQHvR/aw2-effect2.png" style="width: 24px;"> Produces Royal Restoration weekly<br>
+                      <h7>from 1 royal restoration spell at level 1 to 7 royal restoration spells at level 31</h7>
                 </td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Evaluation<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">Before the wonder was introduced, the scouting time reduction
-                was one of the most requested features of the community. Many players now consider the Scout's Tavern to be a highlight of the
-              latest chapters and it becomes a motivation for them to progress forward. This wonder is in my opinion the must-have for everyone who completed the chapter 20.<br>
-              The second effect can become especially useful if you have other bonuses in your city that grant you additional rewards when giving neighbourly help.
-              This can be the Sunset Towers wonder (granting additional seeds for each collected neighbourly help chest), Crystal Lighthouse / Great Bell Spire wonder
-              (granting additional boosted goods) or Moon Bear pet (providing up to 3 knowledge points for every neighbourly help chest while the effect is active).</td>
+                <td style="width: 8%; text-align: center; width: 50%;">Similar to the Dragon Ark wonder, I find little reason to build an additional
+                   wonder solely for the production of Sentient Goods.<br>
+                   The usefulness of the second effect heavily relies on the performance of your fellowship in Tournaments. Tournaments serve
+                   as the primary source for Royal Restoration spells, and if your fellowship can secure all the chests, you can receive
+                  up to 14 Royal Restoration spells weekly. This is twice the number provided by this wonder at its highest levels, leading me
+                  to question whether it is truly worthwhile to invest resources and city space in constructing it. The final decision should
+                  depend on your city's specific needs, particularly considering how much you rely on event buildings, how frequently you
+                  replace them with new ones, and how often you choose to upgrade them to higher chapters instead. Weighing these factors
+                  will help you determine whether the wonder aligns with your city's priorities and objectives.<br>
+                  Also note that while I do recommend having a few event culture-population hybrids in your city, I advise against focusing 
+                  solely on them. There are wonders and game mechanics that allow you to benefit the most from Residential buildings.
+                  For instance, consider the Thermal Spring of Youth wonder in Chapter 15, which increases the population in each Residential 
+                  building. Additionally, the Community Work introduced in Chapter 21 is exclusively provided by Residential buildings.<br>
+                  So having an excessive number of event buildings can not only lead to negative consequences in terms of the intended Game Design,
+                  but may also result in exceeding the requirements for Royal Restoration spells.</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Rating<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_10">10/10</b></td>
+                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_5">5/10</b></td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
