--- a/guestRaces/guestRacesTabs/ch18/wonders.html
+++ b/guestRaces/guestRacesTabs/ch18/wonders.html
@@ -21,42 +21,49 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/5Y4QzbD/aw1.png" style="max-width: 30%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/5Y4QzbD/aw1.png" style="max-width: 20%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Size<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">4x7</td>
+                <td style="width: 8%; text-align: center; width: 50%;">3x4</td>
               </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                    <img src="https://i.ibb.co/GHr7n0J/aw1-effect1.png" style="width: 24px;"> Reduces Ascended Goods Decay<br>
-                    <h7>to 8.8% at level 1 and to 2% at level 30 (grows linearly)</h7><br>
-                    <img src="https://i.ibb.co/B4tTzwj/aw1-effect2.png" style="width: 24px;"> Produces Ghastly Banshees every 3 hours (as a percentage of your current Units per Squad)<br>
-                    <h7>from 22.5% of your squad size at level 1 to 172.5% of your squad size at level 35 (grows linearly)</h7>
+                    <img src="https://i.ibb.co/GHr7n0J/aw1-effect1.png" style="width: 24px;"> Produces an amount of Gruff Orc Warrior every 3 hours (as a percentage of your current Units per Squad)<br>
+                    <h7>from 22.5% of your squad size at level 1 to 172.5% of your squad size at level 35</h7><br>
+                    <img src="https://i.ibb.co/B4tTzwj/aw1-effect2.png" style="width: 24px;"> Rewards an amount of Orcs per Tournament Point (depending on the Tournament points you achieved and your required culture)<br>
+                    <h7>from 0.00024% of your required culture per one tournament point at level 1 to 0.00184% at level 35</h7>
                 </td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Evaluation<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">Reduction of decay is one of the most useful benefits for your city and can greatly
-                facilitate the stacking of respective goods. Ascended goods will be an integral part of any future chapter and it makes sense to
-                ease the trading process by reducing the nightly decay. Future wonders may bring additional effects for ascended goods, but at the time
-                of writing this guide, only the Maman Le Pré's Antique Shop is known to give ascended goods when collecting community work, while
-                having almost useless secondary effect. Community Work is highly likely to receive some more interesting wonders in the future, so at this point,
-                I have decided to go with Ancestral Resting Place despite its rather large size.<br>
-                I do not consider the secondary effect to be a compelling reason for constructing this wonder.</td>
+                <td style="width: 8%; text-align: center; width: 50%;">If, for instance, you possess 1,000,000 required culture, the fully upgraded
+                   wonder would yield 92,000 orcs weekly if you achieve 5,000 points in the Tournament. While this number may seem appealing, I have
+                  discovered more efficient strategies to produce orcs in my city, rendering the construction of an additional
+                  wonder unnecessary. Instead, I focus on incorporating more Armories into my city. They enhance the effect of Military
+                  buildings, particularly when combined with Brown Bears, and consume a substantial amount of culture (while remaining
+                  relatively inexpensive in terms of population). This not only aids in ranking but also boosts the output of several
+                  other wonders that rely on required culture. For example, my city's significant number of armories greatly elevates
+                  the production of the second wonder in this chapter, the Temple of Spirits, which eliminates any need for additional
+                  Unurium production in the Trader and also eliminates the need for constructing even bigger (and less efficient) wonder, the Vallorial Seal Tower in Chapter 19 (with the same
+                  focus on Unurium).<br>
+                  Consequently, I prefer exploring alternative possibilities to gather this resource
+                  more effectively rather than constructing an additional wonder that would have no impact on other productions and
+                  effects within my city, despite its small size.<br>
+                I do not consider the secondary effect to be a compelling reason for constructing this wonder either.</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Rating<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_8">8/10</b></td>
+                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_4">4/10</b></td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
@@ -74,41 +81,49 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/1ZXFjvc/aw2.png" style="max-width: 23%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/1ZXFjvc/aw2.png" style="max-width: 26%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Size<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">5x3</td>
+                <td style="width: 8%; text-align: center; width: 50%;">7x4</td>
               </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                      <img src="https://i.ibb.co/z6dKg0b/aw2-effect1-2.png" style="width: 24px;"> Reduces the Scouting time<br>
-                      <h7>to 94% at level 1 and to 35% at level 35 (grows linearly)</h7><br>
-                      <img src="https://i.ibb.co/z6dKg0b/aw2-effect1-2.png" style="width: 24px;"> Increases the amount of Neighbourly Help Chests<br>
-                      <h7>from 1 additional chest at level 1 to 4 additional chests at level 31 (grows linearly)</h7>
+                      <img src="https://i.ibb.co/z6dKg0b/aw2-effect1-2.png" style="width: 24px;"> Rewards an amount of Unurium per Spire Chest (depending on your Required Culture)<br>
+                      <h7>from 0.15% of your required culture at level 1 to 1.15% at level 35</h7><br>
+                      <img src="https://i.ibb.co/z6dKg0b/aw2-effect1-2.png" style="width: 24px;"> Rewards an amount of Unurium per Event Currency Pickup from around your city (depending on your Required Culture)<br>
+                      <h7>from 0.075% of your required culture at level 1 to 0.575% at level</h7>
                 </td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Evaluation<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">Before the wonder was introduced, the scouting time reduction
-                was one of the most requested features of the community. Many players now consider the Scout's Tavern to be a highlight of the
-              latest chapters and it becomes a motivation for them to progress forward. This wonder is in my opinion the must-have for everyone who completed the chapter 20.<br>
-              The second effect can become especially useful if you have other bonuses in your city that grant you additional rewards when giving neighbourly help.
-              This can be the Sunset Towers wonder (granting additional seeds for each collected neighbourly help chest), Crystal Lighthouse / Great Bell Spire wonder
-              (granting additional boosted goods) or Moon Bear pet (providing up to 3 knowledge points for every neighbourly help chest while the effect is active).</td>
+                <td style="width: 8%; text-align: center; width: 50%;">To fully capitalize on the benefits of this wonder, your primary focus
+                  should be on maximizing the amount of required culture in your city, as both of its effects heavily depend on it. I have
+                  personally found success through a strategic approach involving Armories. By significantly increasing the number of Armories
+                  in my city, I managed to consume a substantial amount of culture while utilizing a relatively small population, enabling me
+                  to construct numerous Armories without significant strain.<br>
+                  For instance, let's assume you possess 1,000,000 required culture, which is approximately the average number
+                  for a Chapter 18 player. With this setup, the wonder will yield a remarkable 552,000 Unurium weekly from the Spire of Eternity
+                  (a completion I highly recommend). Moreover, you may also receive an additional 86,250 Unurium daily if there is an ongoing
+                  event and you diligently collect event currency in the city outskirts. Consequently, this approach not only grants you
+                  significantly more Unurium weekly compared to the second Unurium-focused wonder in the following chapter,
+                  the Vallorian Seal Tower, but it also allows you to entirely cease Unurium production in the Trader. Thus, there is no longer
+                  any need for switching productions between Unurium and Seeds, providing a more efficient resource management system in your
+                  city.<br>
+                  The wonder is not the smallest one; however, I highly recommend it to anyone facing Unurium deficiency as it may offer a definitive solution.</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Rating<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_10">10/10</b></td>
+                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_9">9/10</b></td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
