--- a/guestRaces/guestRacesTabs/ch21/wonders.html
+++ b/guestRaces/guestRacesTabs/ch21/wonders.html
@@ -1,14 +1,6 @@
 <!-- HTML -->
 
-<div style="margin-left: 3%; margin-right: 3%; margin-bottom: 5px; text-align: center;">
-
-  This tab will be visible soon! Please come back later.
-
-  <center><img src="https://i.ibb.co/5TvsbBc/lock.png" style="margin-top: 15px;"></center>
-
-</div>
-
-<!--<div id="main">
+<div id="main">
 
     <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: The Vallorian Legend ::..<br></h5>
     <img id="event_banner" src="https://i.ibb.co/f4FTJcz/ch21-banner.png" alt="undefined" class="center " style="width: 50%; margin-bottom: 15px;">
@@ -29,7 +21,7 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/Zdy6Xh4/ch21-aw1.png" style="max-width: 30%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/Zdy6Xh4/ch21-aw1.png" style="max-width: 26%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
@@ -42,23 +34,23 @@
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                    <ul>
-                        <li>Gives Boosted Ascended Goods when collecting Community Work (factor: 3x - 32.5x)</li>
-                        <li>Produces Seeds every 3 hours depending on Units per Squad (value: 6% - 65%)</li>
-                    </ul>
+                    <img src="" style="width: 24px;"> Gives Boosted Ascended Goods when collecting Community Work<br>
+                    <h7>from 3x the amount of collected Community Work at level 1 to 32.5x at level 35</h7><br>
+                    <img src="" style="width: 24px;"> Produces Seeds every 3 hours depending on Units per Squad<br>
+                    <h7>from 6% of your Squad Size at level 1 to 65% of your Squad Size at level 35</h7>
                 </td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Tricks<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">75 <img src="https://i.ibb.co/8KMKWPm/event-currency-1.png"></td>
+                <td style="width: 8%; text-align: center; width: 50%;">Soon</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Rating<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">75 <img src="https://i.ibb.co/8KMKWPm/event-currency-1.png"></td>
+                <td style="width: 8%; text-align: center; width: 50%;">Soon</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
@@ -76,7 +68,7 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/WBT5ZNg/ch21-aw2.png" style="max-width: 30%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/WBT5ZNg/ch21-aw2.png" style="max-width: 26%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
@@ -89,24 +81,25 @@
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                    <ul>
-                        <li>Produces Vallorian Guards every 3 hours (value: 22.5% - 172.5%)</li>
-                        <li>Cauldron Ingredients Cost Reduction (factor: -6% - -65%)</li>
-                        <li>Academy Production Time Reduction (factor: -6% - -65%)</li>
-                    </ul>
+                  <img src="" style="width: 24px;"> Produces Vallorian Guards every 3 hours<br>
+                  <h7>from 22.5% at level 1 to 172.5% at level 35</h7><br>
+                  <img src="" style="width: 24px;"> Cauldron Ingredients Cost Reduction<br>
+                  <h7>from 6% of reduction at level 1 to 65% of reduction at level 35</h7><br>
+                  <img src="" style="width: 24px;">Academy Production Time Reduction<br>
+                  <h7>from 6% of reduction at level 1 to 65% of reduction at level 35</h7>
                 </td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Tricks<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">75 <img src="https://i.ibb.co/8KMKWPm/event-currency-1.png"></td>
+                <td style="width: 8%; text-align: center; width: 50%;">Soon</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Rating<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">75 <img src="https://i.ibb.co/8KMKWPm/event-currency-1.png"></td>
+                <td style="width: 8%; text-align: center; width: 50%;">Soon</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
@@ -116,25 +109,12 @@
               </tr>
           </tbody>
         </table>
-      </div>
-
-    na zaciatku pridat nejaky popis o tom, ze tato spriatelena rasa prinasa tieto dva wondery, take a take,
-    pre kazdy zrychla popisat ich efekty, dalej ako tieto efekty mozno uzitocne vyuzit, na co a preco su dobre,
-    ci by mali byt tieto divy prioritou pre stavbu (ak nie, ci sa radsej oplati pockat na nejaky iny div podobneho typu),
-    vysvetlit ako ich efekty v hre vlastne funguju a na zaver spravit nejake moje zhodnotenie tychto divov, teda oznacit
-    ich nejakym textovym piktogramom ako VELMI UZITOCNY, PRIEMERNY a pod. a oddovodnit to<br><br>
-
-    html zobrat z textovych navodov napr. pre kitchen event
-
-    
-    avatary, vyuzitie tychto divov, hodnotenie
-
-     
+      </div>     
 
    </div>
    
 
-</div>-->
+</div>
   
 <!-- JS DATABASE -->
 
