--- a/guestRaces/guestRacesTabs/ch6/wonders.html
+++ b/guestRaces/guestRacesTabs/ch6/wonders.html
@@ -21,23 +21,23 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/kmSvGDD/aw1.png" style="max-width: 30%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/kmSvGDD/aw1.png" style="max-width: 26%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Size<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">4x7</td>
+                <td style="width: 8%; text-align: center; width: 50%;">7x4</td>
               </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                    <img src="https://i.ibb.co/HYYHZbw/aw1-effect1-1.png" style="width: 24px;"> Reduces Ascended Goods Decay<br>
-                    <h7>to 8.8% at level 1 and to 2% at level 30 (grows linearly)</h7><br>
-                    <img src="https://i.ibb.co/Jm1fyfG/aw2-effect2.png" style="width: 24px;"> Produces Ghastly Banshees every 3 hours (as a percentage of your current Units per Squad)<br>
-                    <h7>from 22.5% of your squad size at level 1 to 172.5% of your squad size at level 35 (grows linearly)</h7>
+                    <img src="https://i.ibb.co/HYYHZbw/aw1-effect1-1.png" style="width: 24px;"> Produces Barracks' Light Melee Units every 3 hours as a percentage of your current squadsize<br>
+                    <h7>from 22.5% at level 1 to 172.5% at level 35</h7><br>
+                    <img src="https://i.ibb.co/Jm1fyfG/aw2-effect2.png" style="width: 24px;"> Increases the Barracks, Mercenary Camp and Training Ground's Training Size as a percentage of you current squadsize<br>
+                    <h7>from 22.5% at level 1 to 172.5% at level 35</h7>
                 </td>
               </tr>
               <tr>
@@ -56,7 +56,7 @@
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Rating<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_8">8/10</b></td>
+                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_4">4/10</b></td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
@@ -74,23 +74,23 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/GTqssBg/aw2.png" style="max-width: 23%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/GTqssBg/aw2.png" style="max-width: 26%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Size<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">5x3</td>
+                <td style="width: 8%; text-align: center; width: 50%;">3x8</td>
               </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                      <img src="https://i.ibb.co/DptCRFK/aw2-effect1.png" style="width: 24px;"> Reduces the Scouting time<br>
-                      <h7>to 94% at level 1 and to 35% at level 35 (grows linearly)</h7><br>
-                      <img src="https://i.ibb.co/rvh46Fx/aw2-effect2.png" style="width: 24px;"> Increases the amount of Neighbourly Help Chests<br>
-                      <h7>from 1 additional chest at level 1 to 4 additional chests at level 31 (grows linearly)</h7>
+                      <img src="https://i.ibb.co/DptCRFK/aw2-effect1.png" style="width: 24px;"> Increases the production boosts for your manufactories<br>
+                      <h7>from 124% of basic production at level 1 to 284% of basic production at level 35</h7><br>
+                      <img src="https://i.ibb.co/rvh46Fx/aw2-effect2.png" style="width: 24px;"> Provides additional population as a percentage of your Working Population<br>
+                      <h7>from 2.25% of working population at level 1 to 15% of working population at level 30</h7>
                 </td>
               </tr>
               <tr>
