--- a/guestRaces/guestRacesTabs/ch11/wonders.html
+++ b/guestRaces/guestRacesTabs/ch11/wonders.html
@@ -21,23 +21,23 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/MnBy5Zh/aw1.png" style="max-width: 30%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/MnBy5Zh/aw1.png" style="max-width: 26%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Size<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">4x7</td>
+                <td style="width: 8%; text-align: center; width: 50%;">6x3</td>
               </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                    <img src="https://i.ibb.co/CQVpWyJ/aw1-effect1-1.png" style="width: 24px;"><img src="https://i.ibb.co/VY2YRT8/aw1-effect1-2.png" style="width: 24px;"> Reduces Ascended Goods Decay<br>
-                    <h7>to 8.8% at level 1 and to 2% at level 30 (grows linearly)</h7><br>
-                    <img src="https://i.ibb.co/8090yG6/aw2-effect2.png" style="width: 24px;"> Produces Ghastly Banshees every 3 hours (as a percentage of your current Units per Squad)<br>
-                    <h7>from 22.5% of your squad size at level 1 to 172.5% of your squad size at level 35 (grows linearly)</h7>
+                    <img src="https://i.ibb.co/CQVpWyJ/aw1-effect1-1.png" style="width: 24px;"><img src="https://i.ibb.co/VY2YRT8/aw1-effect1-2.png" style="width: 24px;"> Produces your Barracks' Heavy Ranged Units every 3 hours - as a percentage of your current squadsize<br>
+                    <h7>from 22.5% at level 1 to 172.5% at level 35</h7><br>
+                    <img src="https://i.ibb.co/8090yG6/aw2-effect2.png" style="width: 24px;"> Increases the strength of your Heavy Ranged Units<br>
+                    <h7>from 106% of basic strength at level 1 to 140% of basic strength at level 30</h7>
                 </td>
               </tr>
               <tr>
@@ -74,25 +74,25 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/F4t6P3P/aw2.png" style="max-width: 23%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/F4t6P3P/aw2.png" style="max-width: 26%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Size<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">5x3</td>
+                <td style="width: 8%; text-align: center; width: 50%;">5x5</td>
               </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                      <img src="https://i.ibb.co/Mp81LFG/aw1-effect1.png" style="width: 24px;"> Reduces the Scouting time<br>
-                      <h7>to 94% at level 1 and to 35% at level 35 (grows linearly)</h7><br>
-                      <img src="https://i.ibb.co/R3jwPvn/aw2-effect1.png" style="width: 24px;"> Increases the amount of Neighbourly Help Chests<br>
-                      <h7>from 1 additional chest at level 1 to 4 additional chests at level 31 (grows linearly)</h7><br>
-                      <img src="https://i.ibb.co/TBxfDj0/aw2-effect3.png" style="width: 24px;"> Increases the amount of Neighbourly Help Chests<br>
-                      <h7>from 1 additional chest at level 1 to 4 additional chests at level 31 (grows linearly)</h7>
+                      <img src="https://i.ibb.co/Mp81LFG/aw1-effect1.png" style="width: 24px;"> It generates divine seeds every 12 hours, based on your Main Hall level<br>
+                      <h7>from 24x your Main Hall level at level 1 to 184x at level 35</h7><br>
+                      <img src="https://i.ibb.co/R3jwPvn/aw2-effect1.png" style="width: 24px;"> Increases the duration of your "Magical Manufacturing" Spells<br>
+                      <h7>from 15% at level 1 to 112% at level 35</h7><br>
+                      <img src="https://i.ibb.co/TBxfDj0/aw2-effect3.png" style="width: 24px;"> Increases the power of your "Magical Manufacturing" Spells<br>
+                      <h7>from 57.5% at level 1 to 106% at level 35</h7>
                 </td>
               </tr>
               <tr>
@@ -110,7 +110,7 @@
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Rating<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_10">10/10</b></td>
+                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_9">9/10</b></td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
