--- a/guestRaces/guestRacesTabs/ch12/wonders.html
+++ b/guestRaces/guestRacesTabs/ch12/wonders.html
@@ -21,23 +21,23 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/0sJQw1T/aw1.png" style="max-width: 30%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/0sJQw1T/aw1.png" style="max-width: 26%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Size<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">4x7</td>
+                <td style="width: 8%; text-align: center; width: 50%;">7x3</td>
               </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                    <img src="https://i.ibb.co/Mp81LFG/aw1-effect1.png" style="width: 24px;"> Reduces Ascended Goods Decay<br>
-                    <h7>to 8.8% at level 1 and to 2% at level 30 (grows linearly)</h7><br>
-                    <img src="https://i.ibb.co/mXzwX9P/aw1-effect2.png" style="width: 24px;"> Produces Ghastly Banshees every 3 hours (as a percentage of your current Units per Squad)<br>
-                    <h7>from 22.5% of your squad size at level 1 to 172.5% of your squad size at level 35 (grows linearly)</h7>
+                    <img src="https://i.ibb.co/Mp81LFG/aw1-effect1.png" style="width: 24px;"> Gives you Divine Seeds every time you open a Neighborly Help Chest. The actual amount of Divine Seeds is calculated as the bonus multiplied by the level of your Main Hall<br>
+                    <h7>from 18x at level 1 to 138x at level 35</h7><br>
+                    <img src="https://i.ibb.co/mXzwX9P/aw1-effect2.png" style="width: 24px;"> Reduces the overnight Divine Seed Decay<br>
+                    <h7>from 1.2% of decay at level 1 to 8% of decay at level 30</h7>
                 </td>
               </tr>
               <tr>
@@ -56,7 +56,7 @@
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Rating<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_8">8/10</b></td>
+                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_9">9/10</b></td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
@@ -74,23 +74,23 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/MZCX1nc/aw2.png" style="max-width: 23%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/MZCX1nc/aw2.png" style="max-width: 26%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Size<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">5x3</td>
+                <td style="width: 8%; text-align: center; width: 50%;">6x4</td>
               </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                      <img src="https://i.ibb.co/R3jwPvn/aw2-effect1.png" style="width: 24px;"> Reduces the Scouting time<br>
-                      <h7>to 94% at level 1 and to 35% at level 35 (grows linearly)</h7><br>
-                      <img src="https://i.ibb.co/8090yG6/aw2-effect2.png" style="width: 24px;"> Increases the amount of Neighbourly Help Chests<br>
-                      <h7>from 1 additional chest at level 1 to 4 additional chests at level 31 (grows linearly)</h7>
+                      <img src="https://i.ibb.co/R3jwPvn/aw2-effect1.png" style="width: 24px;"> Increases your Training Grounds Training Speed<br>
+                      <h7>from 15% at level 1 to 112% at level 35</h7><br>
+                      <img src="https://i.ibb.co/8090yG6/aw2-effect2.png" style="width: 24px;"> Gives your Light Melee Units increased damage<br>
+                      <h7>from 106% of basic damage at level 1 to 140% of basic damage at level 30</h7>
                 </td>
               </tr>
               <tr>
@@ -108,7 +108,7 @@
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Rating<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_10">10/10</b></td>
+                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_8">8/10</b></td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
