--- a/guestRaces/guestRacesTabs/ch7/wonders.html
+++ b/guestRaces/guestRacesTabs/ch7/wonders.html
@@ -21,25 +21,25 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/dPrjBRm/aw1.png" style="max-width: 30%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/dPrjBRm/aw1.png" style="max-width: 26%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Size<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">4x7</td>
+                <td style="width: 8%; text-align: center; width: 50%;">5x4</td>
               </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                    <img src="https://i.ibb.co/R3jwPvn/aw2-effect1.png" style="width: 24px;"> Reduces Ascended Goods Decay<br>
-                    <h7>to 8.8% at level 1 and to 2% at level 30 (grows linearly)</h7><br>
-                    <img src="https://i.ibb.co/Q9sZNZ8/aw1-effect2.png" style="width: 24px;"> Produces Ghastly Banshees every 3 hours (as a percentage of your current Units per Squad)<br>
-                    <h7>from 22.5% of your squad size at level 1 to 172.5% of your squad size at level 35 (grows linearly)</h7><br>
-                    <img src="https://i.ibb.co/4MXhnDR/aw1-effect3.png" style="width: 24px;"> Produces Ghastly Banshees every 3 hours (as a percentage of your current Units per Squad)<br>
-                    <h7>from 22.5% of your squad size at level 1 to 172.5% of your squad size at level 35 (grows linearly)</h7>
+                    <img src="https://i.ibb.co/R3jwPvn/aw2-effect1.png" style="width: 24px;"> Increases the duration of your "Power of Provision" Spells<br>
+                    <h7>from 15% at level 1 to 112% at level 35</h7><br>
+                    <img src="https://i.ibb.co/Q9sZNZ8/aw1-effect2.png" style="width: 24px;"> Increases the effect of your "Power of Provision" Spells<br>
+                    <h7>from 215% at level 1 to 312% at level 35</h7><br>
+                    <img src="https://i.ibb.co/4MXhnDR/aw1-effect3.png" style="width: 24px;"> It produces additional supplies for your city every 3 hours as a percentage of your Main Hall's Supply Storage capacity<br>
+                    <h7>from 0.75% of your Main Hall capacity at level 1 to 5.6% at level 35</h7>
                 </td>
               </tr>
               <tr>
@@ -76,25 +76,25 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/Sc0tybF/aw2.png" style="max-width: 23%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/Sc0tybF/aw2.png" style="max-width: 26%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Size<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">5x3</td>
+                <td style="width: 8%; text-align: center; width: 50%;">3x7</td>
               </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                      <img src="https://i.ibb.co/Br2s0zD/aw2-effect1.png" style="width: 24px;"> Reduces the Scouting time<br>
-                      <h7>to 94% at level 1 and to 35% at level 35 (grows linearly)</h7><br>
-                      <img src="https://i.ibb.co/F0QTwKr/aw2-effect2.png" style="width: 24px;"> Increases the amount of Neighbourly Help Chests<br>
-                      <h7>from 1 additional chest at level 1 to 4 additional chests at level 31 (grows linearly)</h7><br>
-                      <img src="https://i.ibb.co/prydxV6/aw2-effect3.png" style="width: 24px;"> Increases the amount of Neighbourly Help Chests<br>
-                      <h7>from 1 additional chest at level 1 to 4 additional chests at level 31 (grows linearly)</h7>
+                      <img src="https://i.ibb.co/Br2s0zD/aw2-effect1.png" style="width: 24px;"> Reduces the Trader's Fee for non discovered players<br>
+                      <h7>from 57.5% of reduction at level 1 to 100% of reduction at level 30</h7><br>
+                      <img src="https://i.ibb.co/F0QTwKr/aw2-effect2.png" style="width: 24px;"> Improves the Wholesaler Offers by increasing the amount of goods you will get<br>
+                      <h7>from 60% at level 1 to 500% at level 30</h7><br>
+                      <img src="https://i.ibb.co/prydxV6/aw2-effect3.png" style="width: 24px;"> Increases the production boost from every portal in your city<br>
+                      <h7>from 6% at level 1 to 46% at level 35</h7>
                 </td>
               </tr>
               <tr>
@@ -112,7 +112,7 @@
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Rating<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_10">10/10</b></td>
+                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_8">8/10</b></td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
