--- a/guestRaces/guestRacesTabs/ch9/wonders.html
+++ b/guestRaces/guestRacesTabs/ch9/wonders.html
@@ -34,10 +34,10 @@
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                    <img src="https://i.ibb.co/wQrjwcK/aw1-effect1.png" style="width: 24px;"> Reduces Ascended Goods Decay<br>
-                    <h7>to 8.8% at level 1 and to 2% at level 30 (grows linearly)</h7><br>
-                    <img src="https://i.ibb.co/d7SwwNb/aw1-effect1.png" style="width: 24px;"> Produces Ghastly Banshees every 3 hours (as a percentage of your current Units per Squad)<br>
-                    <h7>from 22.5% of your squad size at level 1 to 172.5% of your squad size at level 35 (grows linearly)</h7>
+                    <img src="https://i.ibb.co/wQrjwcK/aw1-effect1.png" style="width: 24px;"> Produces additional Broken Shards every 7 days (168 hours)<br>
+                    <h7>from 1 broken shard at level 1 to 7 broken shards at level 31</h7><br>
+                    <img src="https://i.ibb.co/d7SwwNb/aw1-effect1.png" style="width: 24px;"> Generates Mana after you start a scout (as a multiple of your Completed Provinces)<br>
+                    <h7>from 60x the number of your completed provinces at level 1 to 460x at level 35</h7>
                 </td>
               </tr>
               <tr>
@@ -56,7 +56,7 @@
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Rating<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_8">8/10</b></td>
+                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_1">1/10</b></td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
@@ -74,23 +74,23 @@
         <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
           <tbody>
             <tr>
-              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/mN48V0Q/aw2.png" style="max-width: 23%;"></td>
+              <td style="width: 20%; text-align: center;" colspan="2"><img src="https://i.ibb.co/mN48V0Q/aw2.png" style="max-width: 24%;"></td>
             </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Size<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">5x3</td>
+                <td style="width: 8%; text-align: center; width: 50%;">4x4</td>
               </tr>
             <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                      <img src="https://i.ibb.co/BrYJTF2/aw2-effect1-1.png" style="width: 24px;"><img src="https://i.ibb.co/bQR8HM0/aw2-effect1-2.png" style="width: 24px;"> Reduces the Scouting time<br>
-                      <h7>to 94% at level 1 and to 35% at level 35 (grows linearly)</h7><br>
-                      <img src="https://i.ibb.co/h71tHKC/aw2-effect2.png" style="width: 24px;"> Increases the amount of Neighbourly Help Chests<br>
-                      <h7>from 1 additional chest at level 1 to 4 additional chests at level 31 (grows linearly)</h7>
+                      <img src="https://i.ibb.co/BrYJTF2/aw2-effect1-1.png" style="width: 24px;"><img src="https://i.ibb.co/bQR8HM0/aw2-effect1-2.png" style="width: 24px;"> Produces units of your Barracks Mages every 3 hours (as a percentage of Mage Units per Squad)<br>
+                      <h7>from 22.5% at level 1 to 172.5% at level 35</h7><br>
+                      <img src="https://i.ibb.co/h71tHKC/aw2-effect2.png" style="width: 24px;"> Increases the training speed of your Mercenary Camp<br>
+                      <h7>from 15% at level 1 to 112% at level 35</h7>
                 </td>
               </tr>
               <tr>
@@ -108,7 +108,7 @@
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Rating<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_10">10/10</b></td>
+                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_9">9/10</b></td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
